--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3177,10 +3177,6 @@ html {
   width: 0.25rem;
 }
 
-.w-1\/2 {
-  width: 50%;
-}
-
 .w-12 {
   width: 3rem;
 }
@@ -3757,6 +3753,33 @@ html {
 
 .btn{
   text-transform: none;
+}
+
+/* For Firefox */
+
+/* Scrollbar */
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #ffffff #0a212e;
+}
+
+/* Scrollbar for webkit-based browsers (Safari) */
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+
+::-webkit-scrollbar-track {
+  background: #0a212e;
+}
+
+/* Handle */
+
+::-webkit-scrollbar-thumb {
+  background: #ffffff;
 }
 
 /* Styles for the spoiler blocks */
