Init: add post divider

--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3442,6 +3442,21 @@ html {
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.divide-y > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-y-reverse: 0;
+  border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
+  border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+}
+
+.divide-white > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-divide-opacity));
+}
+
+.divide-base-content\/20 > :not([hidden]) ~ :not([hidden]) {
+  border-color: hsl(var(--bc) / 0.2);
+}
+
 .overflow-auto {
   overflow: auto;
 }
@@ -3501,6 +3516,10 @@ html {
 
 .border {
   border-width: 1px;
+}
+
+.border-b {
+  border-bottom-width: 1px;
 }
 
 .border-s-4 {
@@ -3699,6 +3718,10 @@ html {
 
 .pt-4 {
   padding-top: 1rem;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem;
 }
 
 .text-left {
