--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3460,16 +3460,16 @@ html {
   border-radius: 9999px;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
 .rounded-md {
   border-radius: 0.375rem;
 }
 
 .rounded-none {
   border-radius: 0px;
+}
+
+.rounded-sm {
+  border-radius: 0.125rem;
 }
 
 .rounded-l {
@@ -3795,6 +3795,12 @@ html {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -3828,8 +3834,25 @@ html {
 
 /* Don't make button's text uppercase */
 
-.btn{
+.btn {
   text-transform: none;
+  border-radius: 0.125rem;
+}
+
+.btn-circle {
+  border-radius: 9999px;
+}
+
+.input {
+  border-radius: 0.125rem;
+}
+
+.select {
+  border-radius: 0.125rem;
+}
+
+.checkbox {
+  border-radius: 0.125rem;
 }
 
 /* For Firefox */
