--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3274,6 +3274,14 @@ html {
   width: 100vw;
 }
 
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-1\/4 {
+  width: 25%;
+}
+
 .min-w-6 {
   min-width: 1.5rem;
 }
