Roles: add moderator guard for forum cockpit

--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3140,6 +3140,10 @@ html {
   height: 7rem;
 }
 
+.h-36 {
+  height: 9rem;
+}
+
 .h-4 {
   height: 1rem;
 }
@@ -3199,10 +3203,6 @@ html {
 
 .w-1 {
   width: 0.25rem;
-}
-
-.w-1\/2 {
-  width: 50%;
 }
 
 .w-1\/5 {
