--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3197,6 +3197,10 @@ html {
   width: 0.25rem;
 }
 
+.w-1\/2 {
+  width: 50%;
+}
+
 .w-1\/3 {
   width: 33.333333%;
 }
@@ -3284,6 +3288,14 @@ html {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-1\/12 {
+  width: 8.333333%;
+}
+
+.w-5\/12 {
+  width: 41.666667%;
 }
 
 .min-w-6 {
@@ -3713,6 +3725,14 @@ html {
   padding-left: 0.5rem;
 }
 
+.pl-4 {
+  padding-left: 1rem;
+}
+
+.pl-5 {
+  padding-left: 1.25rem;
+}
+
 .pr-1 {
   padding-right: 0.25rem;
 }
@@ -3735,10 +3755,6 @@ html {
 
 .pt-4 {
   padding-top: 1rem;
-}
-
-.pl-6 {
-  padding-left: 1.5rem;
 }
 
 .text-left {
@@ -3875,7 +3891,7 @@ html {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* Don't make button's text uppercase */
+/* Don't make button's text uppercase, change default rounding */
 
 .btn {
   text-transform: none;
@@ -3896,6 +3912,22 @@ html {
 
 .checkbox {
   border-radius: 0.125rem;
+}
+
+/* class to remove spinner from number inputs */
+
+/* Chromium */
+
+input[type="number"].no-spinner::-webkit-outer-spin-button,
+input[type="number"].no-spinner::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+
+input[type="number"].no-spinner {
+  -moz-appearance: textfield;
 }
 
 /* For Firefox */
@@ -3981,9 +4013,9 @@ html {
     align-items: center;
   }
 
-  .max-2xl\:bg-base-200 {
+  .max-2xl\:bg-base-300 {
     --tw-bg-opacity: 1;
-    background-color: hsl(var(--b2) / var(--tw-bg-opacity));
+    background-color: hsl(var(--b3) / var(--tw-bg-opacity));
   }
 }
 
