--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3132,10 +3132,6 @@ html {
   height: 4rem;
 }
 
-.h-24 {
-  height: 6rem;
-}
-
 .h-28 {
   height: 7rem;
 }
@@ -3197,6 +3193,10 @@ html {
   width: 0.25rem;
 }
 
+.w-1\/12 {
+  width: 8.333333%;
+}
+
 .w-1\/2 {
   width: 50%;
 }
@@ -3253,6 +3253,10 @@ html {
   width: 1.25rem;
 }
 
+.w-5\/12 {
+  width: 41.666667%;
+}
+
 .w-52 {
   width: 13rem;
 }
@@ -3288,14 +3292,6 @@ html {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-1\/12 {
-  width: 8.333333%;
-}
-
-.w-5\/12 {
-  width: 41.666667%;
 }
 
 .min-w-6 {
@@ -3426,6 +3422,10 @@ html {
 
 .gap-4 {
   gap: 1rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
 }
 
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
@@ -3633,6 +3633,11 @@ html {
   background-color: rgb(234 179 8 / var(--tw-bg-opacity));
 }
 
+.bg-secondary {
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--s) / var(--tw-bg-opacity));
+}
+
 .bg-opacity-75 {
   --tw-bg-opacity: 0.75;
 }
@@ -3729,10 +3734,6 @@ html {
   padding-left: 1rem;
 }
 
-.pl-5 {
-  padding-left: 1.25rem;
-}
-
 .pr-1 {
   padding-right: 0.25rem;
 }
@@ -3804,6 +3805,11 @@ html {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .font-bold {
@@ -3990,6 +3996,26 @@ input[type="number"].no-spinner {
 .hover\:bg-success:hover {
   --tw-bg-opacity: 1;
   background-color: hsl(var(--su) / var(--tw-bg-opacity));
+}
+
+.hover\:bg-secondary\/20:hover {
+  background-color: hsl(var(--s) / 0.2);
+}
+
+.hover\:bg-secondary\/5:hover {
+  background-color: hsl(var(--s) / 0.05);
+}
+
+.hover\:bg-secondary\/80:hover {
+  background-color: hsl(var(--s) / 0.8);
+}
+
+.hover\:bg-secondary\/75:hover {
+  background-color: hsl(var(--s) / 0.75);
+}
+
+.hover\:bg-error\/75:hover {
+  background-color: hsl(var(--er) / 0.75);
 }
 
 .active\:scale-90:active {
