--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3209,10 +3209,6 @@ html {
   width: 20%;
 }
 
-.w-1\/6 {
-  width: 16.666667%;
-}
-
 .w-12 {
   width: 3rem;
 }
@@ -3292,6 +3288,10 @@ html {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-20 {
+  width: 5rem;
 }
 
 .min-w-6 {
@@ -3608,6 +3608,11 @@ html {
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
+.bg-secondary {
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--s) / var(--tw-bg-opacity));
+}
+
 .bg-slate-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(71 85 105 / var(--tw-bg-opacity));
@@ -3631,11 +3636,6 @@ html {
 .bg-yellow-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(234 179 8 / var(--tw-bg-opacity));
-}
-
-.bg-secondary {
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--s) / var(--tw-bg-opacity));
 }
 
 .bg-opacity-75 {
@@ -3805,11 +3805,6 @@ html {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
 }
 
 .font-bold {
@@ -3993,29 +3988,17 @@ input[type="number"].no-spinner {
   background-color: hsl(var(--er) / var(--tw-bg-opacity));
 }
 
-.hover\:bg-success:hover {
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--su) / var(--tw-bg-opacity));
-}
-
-.hover\:bg-secondary\/20:hover {
-  background-color: hsl(var(--s) / 0.2);
-}
-
-.hover\:bg-secondary\/5:hover {
-  background-color: hsl(var(--s) / 0.05);
-}
-
-.hover\:bg-secondary\/80:hover {
-  background-color: hsl(var(--s) / 0.8);
+.hover\:bg-error\/75:hover {
+  background-color: hsl(var(--er) / 0.75);
 }
 
 .hover\:bg-secondary\/75:hover {
   background-color: hsl(var(--s) / 0.75);
 }
 
-.hover\:bg-error\/75:hover {
-  background-color: hsl(var(--er) / 0.75);
+.hover\:bg-success:hover {
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--su) / var(--tw-bg-opacity));
 }
 
 .active\:scale-90:active {
