--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3201,12 +3201,12 @@ html {
   width: 50%;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
-}
-
 .w-1\/5 {
   width: 20%;
+}
+
+.w-1\/6 {
+  width: 16.666667%;
 }
 
 .w-12 {
@@ -3253,6 +3253,10 @@ html {
   width: 1.25rem;
 }
 
+.w-5\/6 {
+  width: 83.333333%;
+}
+
 .w-52 {
   width: 13rem;
 }
@@ -3294,16 +3298,16 @@ html {
   width: 100vw;
 }
 
-.w-20 {
-  width: 5rem;
+.w-11\/12 {
+  width: 91.666667%;
 }
 
-.w-1\/6 {
-  width: 16.666667%;
+.w-5\/12 {
+  width: 41.666667%;
 }
 
-.w-5\/6 {
-  width: 83.333333%;
+.w-6\/12 {
+  width: 50%;
 }
 
 .min-w-6 {
@@ -3454,6 +3458,10 @@ html {
 
 .divide-base-content\/20 > :not([hidden]) ~ :not([hidden]) {
   border-color: hsl(var(--bc) / 0.2);
+}
+
+.self-end {
+  align-self: flex-end;
 }
 
 .overflow-auto {
@@ -4049,6 +4057,10 @@ input[type="number"].no-spinner {
 @media (min-width: 1536px) {
   .\32xl\:hidden {
     display: none;
+  }
+
+  .\32xl\:w-1\/2 {
+    width: 50%;
   }
 
   .\32xl\:w-1\/3 {
