--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3189,6 +3189,10 @@ html {
   max-height: 24rem;
 }
 
+.max-h-full {
+  max-height: 100%;
+}
+
 .min-h-24 {
   min-height: 6rem;
 }
@@ -3336,6 +3340,10 @@ html {
 
 .flex-none {
   flex: none;
+}
+
+.shrink-0 {
+  flex-shrink: 0;
 }
 
 .grow {
@@ -3763,6 +3771,10 @@ html {
   padding-left: 1rem;
 }
 
+.pl-6 {
+  padding-left: 1.5rem;
+}
+
 .pr-1 {
   padding-right: 0.25rem;
 }
@@ -3785,10 +3797,6 @@ html {
 
 .pt-4 {
   padding-top: 1rem;
-}
-
-.pl-6 {
-  padding-left: 1.5rem;
 }
 
 .text-left {
