--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3505,6 +3505,10 @@ html {
   white-space: pre;
 }
 
+.whitespace-pre-wrap {
+  white-space: pre-wrap;
+}
+
 .break-words {
   overflow-wrap: break-word;
 }
@@ -3747,11 +3751,6 @@ html {
   padding-bottom: 1rem;
 }
 
-.px-1\.5 {
-  padding-left: 0.375rem;
-  padding-right: 0.375rem;
-}
-
 .pb-2 {
   padding-bottom: 0.5rem;
 }
@@ -3774,14 +3773,6 @@ html {
 
 .pl-6 {
   padding-left: 1.5rem;
-}
-
-.pr-1 {
-  padding-right: 0.25rem;
-}
-
-.pr-1\.5 {
-  padding-right: 0.375rem;
 }
 
 .pr-2 {
