--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3144,6 +3144,10 @@ html {
   height: 4rem;
 }
 
+.h-20 {
+  height: 5rem;
+}
+
 .h-28 {
   height: 7rem;
 }
@@ -3239,6 +3243,10 @@ html {
 
 .w-2\/5 {
   width: 40%;
+}
+
+.w-20 {
+  width: 5rem;
 }
 
 .w-28 {
