successfully upload banner image, need to update test

--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3265,6 +3265,10 @@ html {
   height: 7rem;
 }
 
+.h-36 {
+  height: 9rem;
+}
+
 .h-4 {
   height: 1rem;
 }
@@ -3304,6 +3308,14 @@ html {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-48 {
+  height: 12rem;
+}
+
+.h-40 {
+  height: 10rem;
 }
 
 .max-h-96 {
