--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3265,12 +3265,12 @@ html {
   height: 7rem;
 }
 
-.h-36 {
-  height: 9rem;
-}
-
 .h-4 {
   height: 1rem;
+}
+
+.h-40 {
+  height: 10rem;
 }
 
 .h-44 {
@@ -3310,20 +3310,28 @@ html {
   height: 100vh;
 }
 
-.h-48 {
-  height: 12rem;
-}
-
-.h-40 {
-  height: 10rem;
+.h-auto {
+  height: auto;
 }
 
 .max-h-96 {
   max-height: 24rem;
 }
 
-.max-h-full {
-  max-height: 100%;
+.max-h-24 {
+  max-height: 6rem;
+}
+
+.max-h-48 {
+  max-height: 12rem;
+}
+
+.max-h-12 {
+  max-height: 3rem;
+}
+
+.max-h-80 {
+  max-height: 20rem;
 }
 
 .min-h-24 {
@@ -3445,6 +3453,10 @@ html {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-auto {
+  width: auto;
 }
 
 .min-w-6 {
@@ -3830,6 +3842,16 @@ html {
 
 .bg-no-repeat {
   background-repeat: no-repeat;
+}
+
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .p-0 {
