--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3310,28 +3310,16 @@ html {
   height: 100vh;
 }
 
-.h-auto {
-  height: auto;
-}
-
-.max-h-96 {
-  max-height: 24rem;
-}
-
-.max-h-24 {
-  max-height: 6rem;
-}
-
-.max-h-48 {
-  max-height: 12rem;
-}
-
 .max-h-12 {
   max-height: 3rem;
 }
 
 .max-h-80 {
   max-height: 20rem;
+}
+
+.max-h-96 {
+  max-height: 24rem;
 }
 
 .min-h-24 {
@@ -3455,8 +3443,32 @@ html {
   width: 100vw;
 }
 
-.w-auto {
-  width: auto;
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-2\/12 {
+  width: 16.666667%;
+}
+
+.w-4\/12 {
+  width: 33.333333%;
+}
+
+.w-2\/6 {
+  width: 33.333333%;
+}
+
+.w-3\/12 {
+  width: 25%;
+}
+
+.w-3\/6 {
+  width: 50%;
+}
+
+.w-1\/6 {
+  width: 16.666667%;
 }
 
 .min-w-6 {
@@ -3628,6 +3640,10 @@ html {
 
 .self-end {
   align-self: flex-end;
+}
+
+.self-center {
+  align-self: center;
 }
 
 .overflow-auto {
@@ -3847,11 +3863,6 @@ html {
 .object-contain {
   -o-object-fit: contain;
      object-fit: contain;
-}
-
-.object-cover {
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 
 .p-0 {
