Categories: use grid for color picker

--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3279,6 +3279,10 @@ html {
   height: 4rem;
 }
 
+.h-2 {
+  height: 0.5rem;
+}
+
 .h-20 {
   height: 5rem;
 }
@@ -3336,10 +3340,6 @@ html {
   height: 100vh;
 }
 
-.h-2 {
-  height: 0.5rem;
-}
-
 .max-h-12 {
   max-height: 3rem;
 }
@@ -3392,12 +3392,12 @@ html {
   width: 40rem;
 }
 
-.w-2\/5 {
-  width: 40%;
+.w-2 {
+  width: 0.5rem;
 }
 
-.w-2\/6 {
-  width: 33.333333%;
+.w-2\/5 {
+  width: 40%;
 }
 
 .w-20 {
@@ -3410,6 +3410,10 @@ html {
 
 .w-3 {
   width: 0.75rem;
+}
+
+.w-3\/12 {
+  width: 25%;
 }
 
 .w-3\/5 {
@@ -3485,12 +3489,8 @@ html {
   width: 100vw;
 }
 
-.w-3\/12 {
-  width: 25%;
-}
-
-.w-2 {
-  width: 0.5rem;
+.w-24 {
+  width: 6rem;
 }
 
 .min-w-6 {
@@ -3523,6 +3523,10 @@ html {
 
 .grow {
   flex-grow: 1;
+}
+
+.origin-bottom-left {
+  transform-origin: bottom left;
 }
 
 .origin-top-right {
@@ -3571,6 +3575,10 @@ html {
 
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -4015,6 +4023,10 @@ html {
   padding-top: 1rem;
 }
 
+.pr-1 {
+  padding-right: 0.25rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -4093,6 +4105,11 @@ html {
   line-height: 1.375;
 }
 
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
@@ -4106,11 +4123,6 @@ html {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .opacity-0 {
