Post types: setup minimalist CSP, refine in further steps

--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3932,6 +3932,14 @@ html {
   --tw-bg-opacity: 0.75;
 }
 
+.bg-\[url\(\'\/banner\.jpg\'\)\] {
+  background-image: url('/banner.jpg');
+}
+
+.bg-\[url\(\'\{\}\'\)\] {
+  background-image: url('{}');
+}
+
 .bg-cover {
   background-size: cover;
 }
