User profile: set comment id as parameter in user comments and highlight searched comment in comment tree

--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3870,6 +3870,10 @@ html {
   border-color: hsl(var(--bc) / 0.2);
 }
 
+.border-base-content\/50 {
+  border-color: hsl(var(--bc) / 0.5);
+}
+
 .border-primary {
   --tw-border-opacity: 1;
   border-color: hsl(var(--p) / var(--tw-border-opacity));
