User profile: make user widget clickable to navigate to profile, add username in profile

--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3319,6 +3319,10 @@ html {
   margin-top: 0.25rem;
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
 .mt-3 {
   margin-top: 0.75rem;
 }
@@ -3426,6 +3430,10 @@ html {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-8 {
+  height: 2rem;
 }
 
 .max-h-12 {
@@ -3852,6 +3860,10 @@ html {
 
 .border {
   border-width: 1px;
+}
+
+.border-2 {
+  border-width: 2px;
 }
 
 .border-b {
